#298 Tweak rich-editor borders and fix text truncation on md desktops.

--- a/src/scss/components/attachment/_pane.scss
+++ b/src/scss/components/attachment/_pane.scss
@@ -47,6 +47,7 @@
 		@include mouse-and-bp-only(md) {
 			flex: 0 0 50%;
 			border-left: $border-width solid $attachment-details-border-color;
+			min-width: 0;
 		}
 
 		@include mouse-and-bp-up(lg) {
@@ -63,5 +64,11 @@
 	.placeholder {
 		font-size: $font-size-h1;
 		color: $attachment-placeholder-color;
+	}
+
+	.rich-editor {
+		@include mouse-and-bp-up(md) {
+			border-top: $border-width solid $editor-border-color;
+		}
 	}
 }
