--- a/src/scss/components/note/_pane.scss
+++ b/src/scss/components/note/_pane.scss
@@ -36,6 +36,10 @@
 	.rich-editor {
 		@include mouse-and-bp-only(md) {
 			flex: 0 0 50%;
+
+			&:not(:only-child) {
+				border-left: $border-width solid $editor-border-color;
+			}
 		}
 
 		// Standalone note
@@ -47,6 +51,10 @@
 
 		@include mouse-and-bp-up(lg) {
 			flex: 0 0 calc(50% + #{$space-md});
+
+			&:not(:only-child) {
+				border-top: $border-width solid $editor-border-color;
+			}
 		}
 	}
 }
