--- a/src/scss/components/rich-editor/_rich-editor.scss
+++ b/src/scss/components/rich-editor/_rich-editor.scss
@@ -51,16 +51,6 @@
 		background-color: $editor-bg;
 	}
 
-	&:not(:only-child) {
-		@include mouse-and-bp-only(md) {
-			border-left: $border-width solid $editor-border-color;
-		}
-
-		@include mouse-and-bp-up(lg) {
-			border-top: $border-width solid $editor-border-color;
-		}
-	}
-
 	.editor-container,
 	.tox-tinymce,
 	.tox-edit-area {
